CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(CMAKE_USE_RELATIVE_PATHS ON)
IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF()

PROJECT(CSharp)

# 设置头文件查找路径
INCLUDE_DIRECTORIES(Server/ThirdParty/ENet)

ADD_DEFINITIONS(-DHAS_SOCKLEN_T)

# 子目录
ADD_SUBDIRECTORY(Server/ThirdParty/ENet)