CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

PROJECT(Cpp)

OPTION(BUILD_TESTS "Decide if the test suite shall be built or not" ON)

IF(BUILD_TESTS)
	ENABLE_TESTING()
ENDIF()

INCLUDE_DIRECTORIES(Egametang)
INCLUDE_DIRECTORIES(ThirdParty)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Egametang)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)

FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
LINK_DIRECTORIES(${PROTOBUF_LIBRARIES})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

FIND_PACKAGE(Boost REQUIRED python thread system)
SET(Boost_USE_STATIC_LIBS    ON)
SET(Boost_USE_MULTITHREADED  ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})

ADD_SUBDIRECTORY(Egametang)
ADD_SUBDIRECTORY(ThirdParty)