CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

ADD_DEFINITIONS(-O2)

PROJECT(Cpp)

OPTION(BUILD_TESTS "Decide if the test suite shall be built or not" ON)

IF(BUILD_TESTS)
	ENABLE_TESTING()
ENDIF()

INCLUDE_DIRECTORIES(Egametang)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Egametang)

FIND_PACKAGE(GFlags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})

FIND_PACKAGE(GLog REQUIRED)
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR})

FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})

FIND_PACKAGE(GMock REQUIRED)
INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIR})

FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

FIND_PACKAGE(Perftools REQUIRED)

FIND_PACKAGE(Boost REQUIRED python thread system)
SET(Boost_USE_STATIC_LIBS    ON)
SET(Boost_USE_MULTITHREADED  ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})

set(ThirdPartyLibs
	${GLOG_LIBRARIES}
	${GFLAGS_LIBRARIES}
	${GTEST_LIBRARIES}
	${GMOCK_LIBRARIES}
	${PROTOBUF_LIBRARIES}
	${Boost_LIBRARIES}
	${PYTHON_LIBRARIES}
	${PERFTOOLS_DEBUG_LIBRARIES}
)

ADD_SUBDIRECTORY(Egametang)